--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,253 @@
+/* * {
+  border: 1px solid black;
+} */
+
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+.logo_place_header {
+  width: 183px;
+  height: 32px;
+  position: absolute;
+  left: 64px;
+  top: 30px;
+  background-image: url(../images/logo_place_header.svg);
+  z-index: 2;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+  z-index: -1;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+    .header__subtitle {
+      width: 388px;
+      position: absolute;
+      left: 64px;
+      bottom: 30px;
+      z-index: 1;
+      font-size: 18px;
+      line-height: 25px;
+    }
+
+    .header__main-illustration {
+      width: 765px;
+      height: 608px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background-image: url(../images/header-image.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    .header__square-pic {
+      width: 568px;
+      height: 568px;
+      position: absolute;
+      top: 64px;
+      right: 0;
+      background-color: #2f80ed;
+      z-index: -1;
+    }
+
+    .header__title {
+      width: 730px;
+      font-size: 102px;
+      line-height: 96px;
+      align-self: center;
+      margin-left: 64px;
+      z-index: 1;
+    }
+
+    .header__link {
+      text-decoration: none;
+      color: #2f80ed;
+    }
+
+.description {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+    .two-columns__main-text {
+      min-width: 784px;
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .two-columns__paragraph {
+      font-size: 24px;
+      line-height: 34px;
+      margin: 0 0 30px 0;
+    }
+
+    .two-columns__paragraph:last-of-type {
+      margin-bottom: 0;
+    }
+
+    .two-columns__brief {
+      font-size: 18px;
+      line-height: 1.2;
+      font-weight: normal;
+      color: #2f80ed;
+      width: 175px;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+    }
+
+    .two-columns__span-accent {
+      font-weight: bold;
+    }
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+}
+
+    .table__cell {
+      width: 250px;
+      margin-top: 60px;
+    }
+
+    .table__heading {
+      margin: 0 0 20px 0;
+      line-height: 1.15;
+      font-size: 24px;
+    }
+
+    .table__text {
+      margin: 20px 0 0 0;
+      line-height: 1.2;
+      font-size: 18px;
+    }
+
+.section-title {
+  width: 60%;
+  margin: 0;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+}
+
+.section-title_location_digits {
+  margin-bottom: 20px;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.feynman {
+  height: 890px;
+  position: relative;
+  background-color: #f2f2f2;
+}
+
+.feynman__picture {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 0 auto 70px;
+  padding-top: 100px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  position: relative;
+  z-index: 1;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  position: relative;
+  z-index: 1;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  text-decoration: none;
+  color: #2f80ed;
+}
+.kaufman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 100px;
+  background-color: #1f1f1f;
+  padding-bottom: 90px;
+  padding-top: 90px;
+  position: relative;
+  overflow: hidden;
+  z-index: -2;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+.section-title_theme_dark {
+  color: white;
+  margin-bottom: 20px;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
