--- a/styles/style.css
+++ b/styles/style.css
@@ -26,101 +26,101 @@
   display: flex;
   position: relative;
   background-color: #f2f2f2;
-  z-index: -1;
 }
 
-    .header__subtitle {
-      width: 388px;
-      position: absolute;
-      left: 64px;
-      bottom: 30px;
-      z-index: 1;
-      font-size: 18px;
-      line-height: 25px;
-    }
+.header__subtitle {
+  max-width: 388px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  z-index: 2;
+  font-size: 18px;
+  line-height: 25px;
+  margin: 0;
+}
 
-    .header__main-illustration {
-      width: 765px;
-      height: 608px;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      background-image: url(../images/header-image.png);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+}
 
-    .header__square-pic {
-      width: 568px;
-      height: 568px;
-      position: absolute;
-      top: 64px;
-      right: 0;
-      background-color: #2f80ed;
-      z-index: -1;
-    }
+.header__square-pic {
+  width: 568px;
+  height: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  background-color: #2f80ed;
+}
 
-    .header__title {
-      width: 730px;
-      font-size: 102px;
-      line-height: 96px;
-      align-self: center;
-      margin-left: 64px;
-      z-index: 1;
-    }
+.header__title {
+  max-width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  align-self: center;
+  margin: 0 0 0 64px;
+  z-index: 2;
+}
 
-    .header__link {
-      text-decoration: none;
-      color: #2f80ed;
-    }
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
 
 .description {
-  display: flex;
-  justify-content: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+display: flex;
+justify-content: center;
+padding-top: 100px;
+padding-bottom: 100px;
 }
 
 .two-columns {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
+width: 80%;
+display: flex;
+justify-content: space-between;
 
 }
 
-    .two-columns__main-text {
-      min-width: 784px;
-      width: 80%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
+.two-columns__main-text {
+  min-width: 784px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-    .two-columns__paragraph {
-      font-size: 24px;
-      line-height: 34px;
-      margin: 0 0 30px 0;
-    }
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+  margin: 0 0 30px 0;
+}
 
-    .two-columns__paragraph:last-of-type {
-      margin-bottom: 0;
-    }
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
 
-    .two-columns__brief {
-      font-size: 18px;
-      line-height: 1.2;
-      font-weight: normal;
-      color: #2f80ed;
-      width: 175px;
-      display: flex;
-      flex-direction: column;
-      margin: 0;
-    }
+.two-columns__brief {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+  width: 175px;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
 
-    .two-columns__span-accent {
-      font-weight: bold;
-    }
+.two-columns__span-accent {
+  font-weight: bold;
+}
 
 .digits {
   display: flex;
@@ -131,7 +131,7 @@
 
 .section-title {
   width: 60%;
-  margin: 0;
+  margin: 0 0 20px 0;
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
@@ -155,104 +155,107 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 1100px;
+  padding: 0;
 }
 
-    .table__cell {
-      width: 250px;
-      margin-top: 60px;
-    }
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+  list-style: none;
+}
 
-    .table__heading {
-      margin: 0 0 20px 0;
-      line-height: 1.15;
-      font-size: 24px;
-    }
+.table__heading {
+  margin: 0 0 20px 0;
+  line-height: 1.15;
+  font-size: 24px;
+}
 
-    .table__text {
-      margin: 20px 0 0 0;
-      line-height: 1.2;
-      font-size: 18px;
-    }
+.table__text {
+  margin: 20px 0 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+}
 
 .feynman {
-  min-height: 890px;
-  position: relative;
-  background-color: #f2f2f2;
+min-height: 890px;
+position: relative;
+background-color: #f2f2f2;
 }
 
-    .feynman__picture {
-      width: 867px;
-      height: 637px;
-      position: absolute;
-      left: 0;
-      bottom: 0;
-    }
+.feynman__picture {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
 
-    .feynman__title {
-      width: 648px;
-      margin: 0 auto 70px;
-      padding-top: 100px;
-      text-align: center;
-      line-height: 1.15;
-      font-size: 120px;
-      position: relative;
-      z-index: 1;
-    }
+.feynman__title {
+  max-width: 648px;
+  margin: 0 auto 70px;
+  padding-top: 100px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  position: relative;
+  z-index: 1;
+}
 
-    .feynman__subtitle {
-      margin: 0;
-      text-align: center;
-      line-height: 51px;
-      font-size: 36px;
-      position: relative;
-      z-index: 1;
-    }
+.feynman__subtitle {
+  margin: 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  position: relative;
+  z-index: 1;
+}
 
-    .feynman__link {
-      position: absolute;
-      right: 48px;
-      top: 50%;
-      line-height: 51px;
-      font-size: 36px;
-      text-decoration: none;
-      color: #2f80ed;
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  text-decoration: none;
+  color: #2f80ed;
 }
 .kaufman {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 100px;
   background-color: #1f1f1f;
   padding-bottom: 90px;
   padding-top: 90px;
   position: relative;
   overflow: hidden;
-  z-index: -2;
 }
 
-    .kaufman__triangle {
-      width: 877px;
-      height: 877px;
-      position: absolute;
-      top: 0;
-      right: -210px;
-      z-index: -1;
-    }
-    .section-title_theme_dark {
-      color: white;
-      margin-bottom: 20px;
-    }
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 1;
+}
+.section-title_theme_dark {
+  color: white;
+  margin-bottom: 20px;
+  z-index: 2;
+}
 
-    .section-subtitle_theme_dark {
-      color: white;
-    }
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 2;
+}
 
-    .table__cell_theme_dark {
-      width: 200px;
-      color: white;
-      margin-right: 0;
-      margin-top: 80px;
-    }
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+  z-index: 2;
+}
 
 .footer {
   background-color: #1f1f1f;
@@ -262,7 +265,7 @@
 
 .logo_place_footer {
   height: 35px;
-  background-image: url(../images/logo_place_footer.svg)
+  background-image: url(../images/logo_place_footer.svg);
 }
 
 .footer__columns {
@@ -320,4 +323,10 @@
   color: white;
   line-height: 30px;
   font-size: 18px;
+}
+
+.footer__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
