--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,10 @@
   color: #2f80ed;
 }
 
+.header__link:hover {
+  color: #0c2231;
+}
+
 .description {
 display: flex;
 justify-content: center;
@@ -218,7 +222,13 @@ background-color: #f2f2f2;
   font-size: 36px;
   text-decoration: none;
   color: #2f80ed;
+  z-index:9;
 }
+
+.feynman__link:hover {
+  color: #0c2231;
+}
+
 .kaufman {
   display: flex;
   flex-direction: column;
@@ -323,6 +333,10 @@ background-color: #f2f2f2;
   color: white;
   line-height: 30px;
   font-size: 18px;
+}
+
+.footer__column-link:hover {
+  color: #404e88;
 }
 
 .footer__list {
