--- a/pages/index.css
+++ b/pages/index.css
@@ -29,12 +29,28 @@
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__square-pic/header__square-pic.css);
 @import url(../blocks/header/__link/header__link.css);
-@import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+@import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__book-container/khan__book-container.CSS);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__title/khan__title.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_location/logo_location_footer.css);
 @import url(../blocks/logo/_location/logo_location_header.css);
+@import url(../blocks/oakley/oakley.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/resourses/resourses.css);
+@import url(../blocks/resourses/__logo-link/resourses__logo-link.css);
+@import url(../blocks/resourses/__logo-zone-item/resourses__logo-zone-item.css);
+@import url(../blocks/resourses/__logo-zone/resourses__logo-zone.css);
+@import url(../blocks/resourses/__logo/resourses__logo.css);
 @import url(../blocks/rotation/rotation.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
@@ -51,5 +67,8 @@
 @import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
 @import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
 
 
