--- a/blocks/logo/_location/logo_location_header.css
+++ b/blocks/logo/_location/logo_location_header.css
@@ -1,5 +1,5 @@
 .logo_location_header {
-  background-image: url(/how-to-learn/images/logo_place_header.svg);
+  background-image: url(../../../images/logo_place_header.svg);
   height: 32px;
   position: absolute;
   left: 64px;
