--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -4,7 +4,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  background-image: url(/how-to-learn/images/header-image.png);
+  background-image: url(../../../images/header-image.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
