--- a/blocks/logo/_location/logo_location_footer.css
+++ b/blocks/logo/_location/logo_location_footer.css
@@ -1,4 +1,4 @@
 .logo_location_footer {
   height: 35px;
-  background-image: url(/how-to-learn/images/logo_place_footer.svg);
+  background-image: url(../../../images/logo_place_footer.svg);
 }
