--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,8 +1,6 @@
 .footer__columns {
-  margin: 0 auto 40px;
-  padding-top: 60px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   width: 90%;
-  min-height: 280px;
 }
