--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,4 +1,4 @@
-.logo_location_header {
+.logo_place_header {
   background-image: url(../../../images/logo_place_header.svg);
   height: 32px;
   position: absolute;
